JaCoCo-Arquillian-Plugin und embedded-Wildfly vereinfacht